--- a/index2.html/Index.HTML
+++ b/index2.html/Index.HTML
@@ -9,10 +9,11 @@
 
 <body>
     <main>
-        <video width="500" height="240" controls>
+<!--        <video width="500" height="240" controls>
             <source src="MEU_VIDEO_WEB.mov" type="video/mp4"> 
           Vídeo Nathália sorrindo
           </video>
+-->
           <p>Ei, coloca essa música aí pra curtir o site melhor :)</p>
           <audio controls="controls">
             <source src="anavitória_explodir_mp3_web.mp3" type="audio/mp3"/>
