--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,7 @@
             <a href="../Cobrinha/index.html" target="_blank"><img class="imagem" src="IMG/cobrinha.jpg" alt="Nathália" width="31%"/></a>
             <a href="../Loveflix/chosepage_netflix.HTML" target="_blank"><img class="imagem" src="IMG/loveflix.jpg" alt="Nathália" width="30%"/></a>
         </div>
+        <p class="projs">*Ainda estou fazendo o upload dos códigos, porém você pode encontrar todos os projetos no meu github, com imagens e vídeos de demostração</p>
     </div>
     <br>
     <footer>
