--- a/website/index.html
+++ b/website/index.html
@@ -30,13 +30,12 @@
         
     <div class="projetos">
         <h2>Projetos</h2>
-        <p>Clique na imagem para ser direcionado à página de cada projeto</p>
+        <p>Clique na imagem para ser direcionado à página do github de cada trabalho</p>
         <div class="img-proj">
-            <a href="../Catgram/INSTAGRAM_PAGE.HTML" target="_blank"><img class="imagem" src="IMG/catgram.jpg" alt="Nathália" width="30%"/></a>
-            <a href="../Cobrinha/index.html" target="_blank"><img class="imagem" src="IMG/cobrinha.jpg" alt="Nathália" width="31%"/></a>
-            <a href="../Loveflix/chosepage_netflix.HTML" target="_blank"><img class="imagem" src="IMG/loveflix.jpg" alt="Nathália" width="30%"/></a>
+            <a href="https://github.com/nathaliaacouto/catgram" target="_blank"><img class="imagem" src="IMG/catgram.jpg" alt="Nathália" width="30%"/></a>
+            <a href="https://github.com/nathaliaacouto/jogodacobrinha" target="_blank"><img class="imagem" src="IMG/cobrinha.jpg" alt="Nathália" width="31%"/></a>
+            <a href="https://github.com/nathaliaacouto/Loveflix" target="_blank"><img class="imagem" src="IMG/loveflix.jpg" alt="Nathália" width="30%"/></a>
         </div>
-        <p class="projs">*Ainda estou fazendo o upload dos códigos, porém você pode encontrar todos os projetos no meu github, com imagens e vídeos de demostração</p>
     </div>
     <br>
     <footer>
