--- a/website/index.html
+++ b/website/index.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a class="navbar-brand" href="index.HTML">Página inicial</a></li>
                 <li><a class="navbar-brand" href="#projetos">Projetos</a></li>
-                <li><a class="navbar-brand" href="https://www.linkedin.com/in/nathalia-vcouto/">Meu Linkedin</a></li>
-                <li><a class="navbar-brand" href="https://github.com/nathaliaacouto">Meu Github</a></li>
+                <li><a class="navbar-brand" href="https://www.linkedin.com/in/nathalia-vcouto/" target="_blank">Meu Linkedin</a></li>
+                <li><a class="navbar-brand" href="https://github.com/nathaliaacouto" target="_blank">Meu Github</a></li>
             </ul>
         </nav>
     </header>
