adição de página de currículo

--- a/website/index.html
+++ b/website/index.html
@@ -12,12 +12,14 @@
         <nav class="navbar">
             <ul>
                 <li><a class="navbar-brand" href="index.HTML">Página inicial</a></li>
+                <li><a class="navbar-brand" href="curriculo.HTML">Currículo</a></li>
                 <li><a class="navbar-brand" href="#projetos">Projetos</a></li>
                 <li><a class="navbar-brand" href="https://www.linkedin.com/in/nathalia-vcouto/" target="_blank">Meu Linkedin</a></li>
                 <li><a class="navbar-brand" href="https://github.com/nathaliaacouto" target="_blank">Meu Github</a></li>
             </ul>
         </nav>
     </header>
+    
     <main>
         <div class="inicio">
             <img class="imagemnat" src="IMG/nath.png" alt="Nathália" width="10%"/>
