--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,8 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a class="navbar-brand" href="index.HTML">Página inicial</a></li>
-                <li><a class="navbar-brand" href="curriculo.HTML">Currículo</a></li>
+                <li><a class="navbar-brand" href="index.html">Página inicial</a></li>
+                <li><a class="navbar-brand" href="curriculo.html">Currículo</a></li>
                 <li><a class="navbar-brand" href="#projetos">Projetos</a></li>
                 <li><a class="navbar-brand" href="https://www.linkedin.com/in/nathalia-vcouto/" target="_blank">Meu Linkedin</a></li>
                 <li><a class="navbar-brand" href="https://github.com/nathaliaacouto" target="_blank">Meu Github</a></li>
