--- a/website/curriculo.html
+++ b/website/curriculo.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a class="navbar-brand" href="index.HTML">Meu Website</a></li>
+                <li><a class="navbar-brand" href="index.html">Meu Website</a></li>
                 <li><a class="navbar-brand" href="https://www.linkedin.com/in/nathalia-vcouto/">Meu Linkedin</a></li>
                 <li><a class="navbar-brand" href="https://github.com/nathaliaacouto">Meu Github</a></li>
             </ul>
