--- a/website/curriculo.html
+++ b/website/curriculo.html
@@ -24,25 +24,29 @@
 
     <div class="sobre-mim">
         <h2>Sobre mim</h2>
-        <h3>Estudante de ciências da computação (2021.1 - 2025.1)</h3>
-        <p><i class="fas fa-code"></i> Sou apaixonada pelo meu curso e pela área de tecnologia</p>
-        <p><i class="fas fa-code"></i> Estou sempre aberta a novas oportunidades, acredito que uma das melhores maneiras de aprender na vida é colocando a mão na massa</p>
-        <p><i class="fas fa-code"></i> Adjetivos que me descrevem: "determinada, criativa, responsável, confiável"</p>
-        <p><i class="fas fa-code"></i> Sou muito ambiciosa e sempre tento sair da minha zona de conforto</p>
+        <div class="sobre-txt">
+            <h3>Estudante de ciências da computação (2021.1 - 2025.1)</h3>
+            <p><i class="fas fa-code"></i> Sou apaixonada pelo meu curso e pela área de tecnologia</p>
+            <p><i class="fas fa-code"></i> Estou sempre aberta a novas oportunidades, acredito que uma das melhores maneiras de aprender na vida é colocando a mão na massa</p>
+            <p><i class="fas fa-code"></i> Adjetivos que me descrevem: "determinada, criativa, responsável, confiável"</p>
+            <p><i class="fas fa-code"></i> Sou muito ambiciosa e sempre tento sair da minha zona de conforto</p>
+        </div>
     </div>
     <hr>
     <div class="educacao">
         <h2>Educação</h2>
-        <h3>CESAR School</h3>
-        <p><i class="fas fa-code"></i> A CESAR School é, antes de tudo, uma escola de Inovação. 
+        <div class="educacao-txt">
+            <h3>CESAR School</h3>
+            <p><i class="fas fa-code"></i> A CESAR School é, antes de tudo, uma escola de Inovação. 
             Formamos profissionais inovadores, capazes de fomentar e executar projetos que trazem mudanças 
             relevantes para a sociedade. A formação é focada nos interesses do mercado, tanto no que se 
             refere ao ponto de vista técnico, quanto a habilidades como protagonismo, liderança, teamwork e 
             autoempreendedorismo. </p>
-        <h3 class="idiomas">Idiomas</h3>
-        <p><i class="fas fa-code"></i> Inglês avançado </p>
-        <p><i class="fas fa-code"></i> Espanhol iniciante </p>
-        <p><i class="fas fa-code"></i> Português fluente (nativa) </p>
+            <h3 class="idiomas">Idiomas</h3>
+            <p><i class="fas fa-code"></i> Inglês avançado </p>
+            <p><i class="fas fa-code"></i> Espanhol iniciante </p>
+            <p><i class="fas fa-code"></i> Português fluente (nativa) </p>
+        </div>
     </div>
     <hr>
     <div class="habilidades">
