--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="https://gw.alipayobjects.com/zos/antfincdn/4zAaozCvUH/unexpand.svg" />
 
-    <link rel="stylesheet" href="CSS/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <link href='https://fonts.googleapis.com/css?family=Epilogue' rel='stylesheet'>
 
     <title>Meu Website</title>
